# astro-cms

./: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
assets/: main.css
src/: main.rs
templates/: base.html  hello.html  todo-form.html
