[package]
name = "astro"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
